--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -68,6 +68,9 @@
                     height: 224px;
                     background-color: #bebebe;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                     }
@@ -110,6 +113,9 @@
                     height: 90px;
                     background-color: #bebebe;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                     }
@@ -215,6 +221,9 @@
                     text-align: center;
                     background-color: #bebebe;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                     }
@@ -262,6 +271,9 @@
                     text-align: center;
                     background-color: #bebebe;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                     }
