--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -72,10 +72,10 @@
                         height: 120px;
                         overflow: hidden;
                         float: left;
-                        img{
-                            width: 100%;
-                            height: 100%;
-                        }
+                        background-size: 100%;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-color: #ebebeb;
                     }
                     .text{
                         width: 210px;
@@ -214,10 +214,10 @@
                         height: 2.15rem;
                         overflow: hidden;
                         float: left;
-                        img{
-                            width: 100%;
-                            height: 100%;
-                        }
+                        background-size: 100%;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-color: #ebebeb;
                     }
                     .text{
                         width: 3.9rem;
