--- a/src/scss/speakers.scss
+++ b/src/scss/speakers.scss
@@ -23,6 +23,9 @@
                     line-height: 224px;
                     background-color: #ebebeb;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                         height: 100%;
@@ -88,6 +91,9 @@
                     line-height: 2.2rem;
                     background-color: #ebebeb;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                     img{
                         width: 100%;
                         height: 100%;
