--- a/src/scss/supporters.scss
+++ b/src/scss/supporters.scss
@@ -14,7 +14,14 @@
                 margin-top: 45px;
                 margin-right: 32px;
                 overflow: hidden;
+                position: relative;
                 float: left;
+                .logo_link{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                }
                 .logo_box{
                     width: 100%;
                     height: 90px;
@@ -22,6 +29,9 @@
                     text-align: center;
                     background-color: #ebebeb;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                 }
                 .link{
                     width: 100%;
@@ -67,6 +77,9 @@
                     text-align: center;
                     background-color: #ebebeb;
                     overflow: hidden;
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
                 }
                 .link{
                     width: 100%;
