--- a/src/scss/base/common.scss
+++ b/src/scss/base/common.scss
@@ -1,12 +1,12 @@
 // 展示栏
-.show_list_box{
+.show_list_box {
     width: 1248px;
     padding-top: 30px;
     padding-bottom: 16px;
     overflow: hidden;
     position: relative;
     margin: 0 auto;
-    .title{
+    .title {
         width: 100%;
         height: 54px;
         line-height: 54px;
@@ -15,66 +15,66 @@
         font-weight: 600;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 1;         
+        -webkit-line-clamp: 1;
     }
-    .show_number{
+    .show_number {
         width: 100%;
         padding-bottom: 44px;
         overflow: hidden;
-        .number_list{
+        .number_list {
             padding: 15px 0 20px;
             text-align: center;
             overflow: hidden;
-            .item{
+            .item {
                 width: 65px;
                 color: #99c492;
                 float: left;
             }
-            .num{
+            .num {
                 width: 100%;
                 height: 68px;
                 line-height: 68px;
                 font-size: 58px;
             }
-            .tips{
+            .tips {
                 height: 28px;
                 line-height: 28px;
                 font-size: 14px;
                 color: #000;
             }
-            .att{
+            .att {
                 width: 240px;
                 margin-left: 40px;
                 color: #4db3c5;
             }
-            .exh{
+            .exh {
                 width: 215px;
                 color: #e50011;
             }
-            .spe{
+            .spe {
                 width: 185px;
                 color: #ee83ce;
             }
-            .ses{
+            .ses {
                 width: 178px;
                 color: #7979a5;
-            }  
-            .are{
+            }
+            .are {
                 width: 266px;
-                color: #053a7a;                
-            }                      
+                color: #053a7a;
+            }
         }
-        .mar_other{
+        .mar_other {
             margin-top: 20px;
         }
     }
-    .with_logo_box{
+    .with_logo_box {
         width: 100%;
         overflow: hidden;
-        .logo_list{
+        .logo_list {
             padding: 30px 0 20px;
             overflow: hidden;
-            .item{
+            .item {
                 width: 196px;
                 height: 78px;
                 margin-right: 12px;
@@ -85,81 +85,87 @@
                 align-items: center;
                 overflow: hidden;
                 float: left;
+                .bg_box {
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
             }
         }
     }
 }
+
 // mobile展示栏
-.mobile_show_list_box{
+.mobile_show_list_box {
     width: 100%;
     padding: .5rem .2rem 0;
     overflow: hidden;
     position: relative;
     box-sizing: border-box;
-    .title{
+    .title {
         width: 100%;
         line-height: .32rem;
         font-size: .26rem;
         color: #000;
         font-weight: 600;
-        overflow: hidden;      
+        overflow: hidden;
     }
-    .show_number{
+    .show_number {
         width: 100%;
         overflow: hidden;
-        .number_list{
+        .number_list {
             width: 100%;
             overflow: hidden;
-            .item{
+            .item {
                 width: 1.3rem;
                 padding-top: .24rem;
                 color: #99c492;
                 text-align: center;
                 float: left;
             }
-            .num{
+            .num {
                 width: 100%;
                 height: .68rem;
                 line-height: .68rem;
                 font-size: .42rem;
             }
-            .tips{
+            .tips {
                 height: .28rem;
                 line-height: .28rem;
                 font-size: .24rem;
                 color: #000;
             }
-            .att{
+            .att {
                 width: 3.4rem;
                 color: #4db3c5;
             }
-            .exh{
+            .exh {
                 width: 2.2rem;
                 color: #e50011;
             }
-            .spe{
+            .spe {
                 color: #ee83ce;
             }
-            .ses{
+            .ses {
                 width: 3.4rem;
                 color: #7979a5;
-            }  
-            .are{
+            }
+            .are {
                 width: 2.2rem;
-                color: #053a7a;                
-            }                      
+                color: #053a7a;
+            }
         }
-        .mar_other{
+        .mar_other {
             padding: .4rem 0 .3rem;
         }
     }
-    .with_logo_box{
+    .with_logo_box {
         width: 100%;
         overflow: hidden;
-        .logo_list{
+        .logo_list {
             padding: .3rem 0 .2rem;
             overflow: hidden;
-            .item{
+            .item {
                 width: 2.2rem;
                 height: .88rem;
                 margin-right: .25rem;
@@ -170,8 +176,13 @@
                 align-items: center;
                 overflow: hidden;
                 float: left;
+                .bg_box {
+                    background-size: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
             }
-            .item:nth-of-type(3n){
+            .item:nth-of-type(3n) {
                 margin-right: 0;
             }
         }
