--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -228,4 +228,45 @@
         } 
     
     }
+    .gallery_opacity{
+        background-color: rgba(0, 0, 0, 0.8);
+        .close{
+            width: 0.32rem;
+            height: 0.32rem;
+            background: url(../assets/close_f.png) center no-repeat;
+            position: absolute;
+            top: 0.2rem;
+            right: 10%;
+            z-index: 2;
+            margin-top: -1rem;
+        }
+    }
+    .gallery_box{
+        width: 100%;
+        height: 3rem;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 2;  
+    }
+    .swiper-container{
+        width: 100%;
+        height: 3rem;
+        img{
+            width: 100%;
+        } 
+    }
+    .swiper-pagination{
+        font-size: 0.4rem;
+        color: #fff;
+    }
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+        right: 0.3rem;
+    }
+    .swiper-button-prev, .swiper-container-rtl .swiper-button-next{
+        left: 0.3rem;
+    }     
 }
