--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -22,7 +22,38 @@
                     color: #fff;
                     overflow: hidden;
                 }
-            }            
+            } 
+            .bth_pdf{
+                width: 380px;
+                height: 266px;
+                background-image: url(../assets/booth.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 100%;
+                position: relative;
+                cursor: pointer;
+                overflow: hidden;
+                margin: 0 auto;
+                .tips{
+                    width: 100%;
+                    height: 40px;
+                    line-height: 40px;
+                    color: #fff;
+                    font-size: 18px;
+                    background-color: rgba(0, 0, 0, 0.8);
+                    text-align: center;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    z-index: 2;
+                } 
+                .block{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 3;
+                } 
+            }                       
         }
     }
 }
@@ -51,7 +82,32 @@
                     color: #fff;
                     overflow: hidden;
                 }
-            }            
+            }
+            .bth_pdf{
+                width: 5rem;
+                height: 3.5rem;
+                background-image: url(../assets/booth.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 100%;
+                position: relative;
+                cursor: pointer;
+                overflow: hidden;
+                margin: 0 auto;
+                .tips{
+                    width: 100%;
+                    height: .4rem;
+                    line-height: .4rem;
+                    color: #fff;
+                    font-size: .2rem;
+                    background-color: rgba(0, 0, 0, 0.8);
+                    text-align: center;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    z-index: 2;
+                }  
+            }                       
         }
     }
 }
