--- a/src/scss/base/common.scss
+++ b/src/scss/base/common.scss
@@ -35,6 +35,7 @@
                 height: 68px;
                 line-height: 68px;
                 font-size: 58px;
+                font-weight: 600;
             }
             .tips {
                 height: 28px;
@@ -128,6 +129,7 @@
                 height: .68rem;
                 line-height: .68rem;
                 font-size: .42rem;
+                font-weight: 600;
             }
             .tips {
                 height: .28rem;
