--- a/src/scss/base/bottom.scss
+++ b/src/scss/base/bottom.scss
@@ -1,18 +1,18 @@
 // 底栏
-.page_bottom_box{
+.page_bottom_box {
     width: 100%;
     padding: 46px 0 60px;
     background-color: #ebebeb;
     overflow: hidden;
-    .bottom_center{
+    .bottom_center {
         width: 702px;
         margin: 0 auto;
     }
-    .nav_list{
+    .nav_list {
         width: 100%;
         text-align: center;
         overflow: hidden;
-        .item{
+        .item {
             float: left;
             width: 176px;
             height: 52px;
@@ -20,54 +20,55 @@
             font-size: 14px;
             color: #000;
             font-weight: 600;
-            span{
+            span {
                 cursor: pointer;
             }
         }
-        .long{
+        .long {
             width: 350px;
         }
-        .red{
+        .red {
             color: #e50012;
         }
     }
-    .bth_list{
+    .bth_list {
         width: 100%;
-        height: 100px;;
+        height: 100px;
+        ;
         padding: 36px 0 46px;
         text-align: center;
         overflow: hidden;
-        .item{
+        .item {
             float: left;
             width: 176px;
             height: 100%;
         }
-        .logo{
+        .logo {
             float: left;
             width: 350px;
             height: 100%;
             display: flex;
             justify-content: center;
-            align-items: center;            
+            align-items: center;
         }
-        .bth{
+        .bth {
             display: block;
             width: 100%;
-            height:48px;
+            height: 48px;
             line-height: 48px;
             font-size: 14px;
             color: #fff;
-            font-weight: 600;  
-            margin-top: 36px;   
-            cursor: pointer;       
-        }                    
+            font-weight: 600;
+            margin-top: 36px;
+            cursor: pointer;
+        }
     }
-    .link_list{
+    .link_list {
         width: 260px;
         height: 60px;
         overflow: hidden;
         margin: 0 auto;
-        .item{
+        .item {
             width: 60px;
             height: 60px;
             overflow: hidden;
@@ -75,30 +76,31 @@
             margin-right: 40px;
             cursor: pointer;
         }
-        .item:last-child{
+        .item:last-child {
             margin-right: 0;
         }
-        .wechat{
+        .wechat {
             background: url("../assets/index_50.png") center no-repeat;
             background-color: #fff;
         }
-        .facebook{
+        .facebook {
             background: url("../assets/index_53.png") center no-repeat;
             background-color: #fff;
         }
-        .rss{
+        .rss {
             background: url("../assets/index_55.png") center no-repeat;
             background-color: #fff;
-        }            
+        }
     }
-    .authentication{
+    .authentication {
         width: 100%;
         height: 44px;
         margin-top: 50px;
         background: url("../assets/index_61.png") center no-repeat;
+        background-size: contain;
         overflow: hidden;
     }
-    .reference{
+    .reference {
         width: 100%;
         height: 52px;
         line-height: 52px;
@@ -107,23 +109,24 @@
         text-align: center;
     }
 }
+
 // 底栏
-.mobile_page_bottom_box{
+.mobile_page_bottom_box {
     width: 100%;
     padding-bottom: .6rem;
     background-color: #ebebeb;
     overflow: hidden;
-    .bottom_center{
+    .bottom_center {
         width: 100%;
         margin: 0 auto;
     }
-    .nav_list{
+    .nav_list {
         width: 100%;
         padding: .2rem .6rem 0;
         text-align: center;
         box-sizing: border-box;
         overflow: hidden;
-        .item{
+        .item {
             float: left;
             width: 50%;
             height: .7rem;
@@ -132,57 +135,57 @@
             color: #000;
             font-weight: 600;
         }
-        .red{
+        .red {
             color: #e50012;
         }
     }
-    .bth_list{
+    .bth_list {
         width: 100%;
         padding: 1.7rem .5rem .55rem;
         text-align: center;
         box-sizing: border-box;
         overflow: hidden;
         position: relative;
-        .item{
+        .item {
             float: left;
             width: 3rem;
             height: .78rem;
             line-height: .78rem;
         }
-        .logo{
+        .logo {
             width: 1rem;
             height: 1rem;
             display: flex;
             justify-content: center;
-            align-items: center; 
+            align-items: center;
             margin-left: -0.5rem;
-            position: absolute; 
+            position: absolute;
             left: 50%;
             top: .35rem;
-            z-index: 2;         
-            img{
+            z-index: 2;
+            img {
                 width: 100%;
             }
         }
-        .bth{
+        .bth {
             display: block;
             width: 100%;
-            height:100%;
+            height: 100%;
             font-size: 14px;
             color: #fff;
-            font-weight: 600;   
-            cursor: pointer;       
+            font-weight: 600;
+            cursor: pointer;
         }
-        .red_right{
+        .red_right {
             float: right;
-        }                    
+        }
     }
-    .link_list{
+    .link_list {
         width: 2.6rem;
         height: .6rem;
         overflow: hidden;
         margin: 0 auto;
-        .item{
+        .item {
             width: .6rem;
             height: .6rem;
             overflow: hidden;
@@ -190,34 +193,34 @@
             margin-right: .4rem;
             cursor: pointer;
         }
-        .item:last-child{
+        .item:last-child {
             margin-right: 0;
         }
-        .wechat{
+        .wechat {
             background: url("../assets/index_50.png") center no-repeat;
             background-color: #fff;
             background-size: 70%;
         }
-        .facebook{
+        .facebook {
             background: url("../assets/index_53.png") center no-repeat;
             background-color: #fff;
             background-size: 40%;
         }
-        .rss{
+        .rss {
             background: url("../assets/index_55.png") center no-repeat;
             background-color: #fff;
             background-size: 70%;
-        }            
+        }
     }
-    .authentication{
+    .authentication {
         width: 100%;
         height: .55rem;
         margin-top: .5rem;
         background: url("../assets/index_61.png") center no-repeat;
-        background-size: auto .55rem;
+        background-size: contain;
         overflow: hidden;
     }
-    .reference{
+    .reference {
         width: 100%;
         line-height: .32rem;
         margin-top: .2rem;
