--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,16 +1,16 @@
 // PC端样式
-.pc_box{
+.pc_box {
     // 内容
-    .page_content{
+    .page_content {
         width: 1248px;
         overflow: hidden;
         margin: 0 auto;
-        .text_box{
+        .text_box {
             width: 100%;
             text-align: center;
             padding: 40px 0 60px;
             overflow: hidden;
-            .title{
+            .title {
                 width: 100%;
                 height: 88px;
                 line-height: 88px;
@@ -18,82 +18,88 @@
                 font-weight: 800;
                 color: #000;
             }
-            .fonts{
+            .fonts {
                 width: 100%;
                 line-height: 32px;
                 font-size: 18px;
                 color: #000;
             }
         }
-        .list_block{
+        .list_block {
             width: 100%;
             overflow: hidden;
-            .item{
+            .item {
                 width: 400px;
                 height: 400px;
                 margin-left: 24px;
                 margin-bottom: 24px;
                 float: left;
-                img{
+                img {
                     cursor: pointer;
                 }
             }
-            .item:nth-of-type(3n+1){
+            .item:nth-of-type(3n+1) {
                 margin-left: 0;
             }
-            .title_list{
+            .title_list {
                 line-height: 400px;
                 font-size: 36px;
                 text-align: center;
                 font-weight: 600;
                 color: #fff;
                 overflow: hidden;
+                cursor: pointer;
+                transition: background-size 2s ease;
             }
-            .visit{
+            .visit {
                 background-image: url(../assets/index_29.png);
-                background-position: left top;
+                background-position: center;
                 background-repeat: no-repeat;
                 background-size: 100%;
             }
-            .exhibit{
+            .exhibit {
                 background-image: url(../assets/index_30.png);
-                background-position: left top;
+                background-position: center;
                 background-repeat: no-repeat;
                 background-size: 100%;
             }
-            .fsa{
+            .fsa {
                 background-image: url(../assets/index_31.png);
-                background-position: left top;
+                background-position: center;
                 background-repeat: no-repeat;
                 background-size: 100%;
-            }                   
-            .open_time,.link_us{
+            }
+            .title_list:hover {
+                background-size: 120%;
+            }
+            .open_time,
+            .link_us {
                 width: 100%;
                 padding-top: 90px;
                 color: #fff;
                 text-align: center;
                 overflow: hidden;
-                .title{
+                .title {
                     font-size: 24px;
                     height: 88px;
                     line-height: 88px;
                 }
-                .time_list{
+                .time_list {
                     font-size: 18px;
                     height: 32px;
                     line-height: 32px;
                 }
             }
-            .new_list{
+            .new_list {
                 padding: 0 25px;
                 background-color: #053a7a;
                 overflow: hidden;
-                .list{
+                .list {
                     width: 100%;
                     padding: 38px 0;
                     cursor: pointer;
                     overflow: hidden;
-                    .img{
+                    .img {
                         width: 120px;
                         height: 120px;
                         overflow: hidden;
@@ -103,12 +109,12 @@
                         background-position: center;
                         background-color: #ebebeb;
                     }
-                    .text{
+                    .text {
                         width: 210px;
                         color: #fff;
                         overflow: hidden;
                         float: right;
-                        .title{
+                        .title {
                             width: 100%;
                             font-size: 16px;
                             line-height: 18px;
@@ -116,26 +122,26 @@
                             -webkit-box-orient: vertical;
                             -webkit-line-clamp: 2;
                         }
-                        .fonts{
+                        .fonts {
                             width: 100%;
                             font-size: 12px;
-                            line-height: 14px; 
-                            margin-top: 10px;  
+                            line-height: 14px;
+                            margin-top: 10px;
                             display: -webkit-box;
                             -webkit-box-orient: vertical;
-                            -webkit-line-clamp: 5;                     
+                            -webkit-line-clamp: 5;
                         }
                     }
                 }
-                .list:first-child{
-                    border-bottom: 1px dashed #fff; 
+                .list:first-child {
+                    border-bottom: 1px dashed #fff;
                 }
             }
-            .link_list{
+            .link_list {
                 width: 198px;
                 overflow: hidden;
                 margin: 0 auto;
-                .wechat{
+                .wechat {
                     width: 80px;
                     height: 80px;
                     background: url("../assets/index_06.png") center no-repeat;
@@ -144,7 +150,7 @@
                     overflow: hidden;
                     float: left;
                 }
-                .facebook{
+                .facebook {
                     width: 80px;
                     height: 80px;
                     background: url("../assets/index_19.png") center no-repeat;
@@ -152,24 +158,25 @@
                     cursor: pointer;
                     overflow: hidden;
                     float: right;
-                }           
+                }
             }
         }
     }
 }
+
 // 移动端样式
-.mobile_box{
+.mobile_box {
     // 内容
-    .page_content{
+    .page_content {
         width: 100%;
         overflow: hidden;
-        .text_box{
+        .text_box {
             width: 100%;
             text-align: center;
             padding: .6rem .2rem .6rem;
             box-sizing: border-box;
             overflow: hidden;
-            .title{
+            .title {
                 width: 100%;
                 line-height: .6rem;
                 font-size: .36rem;
@@ -177,90 +184,91 @@
                 color: #000;
                 margin-bottom: .35rem;
             }
-            .fonts{
+            .fonts {
                 width: 100%;
                 line-height: .32rem;
                 font-size: .2rem;
                 color: #000;
             }
-            .mt20{
+            .mt20 {
                 margin-top: .2rem;
             }
         }
-        .list_block{
+        .list_block {
             width: 100%;
             padding: .2rem;
             box-sizing: border-box;
             overflow: hidden;
-            .item{
+            .item {
                 width: 2.2rem;
                 height: 2.2rem;
                 margin-left: .25rem;
                 margin-bottom: .25rem;
                 float: left;
-                img{
+                img {
                     width: 100%;
                 }
             }
-            .item:first-child{
+            .item:first-child {
                 margin-left: 0;
             }
-            .title_list{
-                line-height: 2.2rem;
+            .title_list {
+                line-height: 0.4rem;
                 font-size: .36rem;
                 color: #fff;
                 text-align: center;
                 overflow: hidden;
-            } 
-            .visit{
+            }
+            .visit {
                 background-image: url(../assets/index_29.png);
                 background-position: left top;
                 background-repeat: no-repeat;
                 background-size: 100%;
             }
-            .exhibit{
+            .exhibit {
                 background-image: url(../assets/index_30.png);
                 background-position: left top;
                 background-repeat: no-repeat;
                 background-size: 100%;
             }
-            .fsa{
+            .fsa {
                 background-image: url(../assets/index_31.png);
                 background-position: left top;
                 background-repeat: no-repeat;
                 background-size: 100%;
-            }                        
-            .mobile_full{
+            }
+            .mobile_full {
                 width: 100%;
                 margin-left: 0;
                 height: 7.1rem;
             }
-            .open_time,.link_us{
+            .open_time,
+            .link_us {
                 width: 100%;
                 padding-top: 1.7rem;
                 color: #fff;
                 text-align: center;
                 overflow: hidden;
-                .title{
+                .title {
                     font-size: .36rem;
                     height: 1.42rem;
                     line-height: 1.42rem;
                 }
-                .time_list{
+                .time_list {
                     font-size: .28rem;
                     height: .56rem;
                     line-height: .56rem;
                 }
             }
-            .new_list{
+            .new_list {
                 padding: 0 .4rem;
                 background-color: #053a7a;
                 overflow: hidden;
-                .list{
+                .list {
                     width: 100%;
                     padding: .7rem 0;
                     overflow: hidden;
-                    .img{
+                    .img {
                         width: 2.15rem;
                         height: 2.15rem;
                         overflow: hidden;
@@ -270,12 +278,12 @@
                         background-position: center;
                         background-color: #ebebeb;
                     }
-                    .text{
+                    .text {
                         width: 3.9rem;
                         color: #fff;
                         overflow: hidden;
                         float: right;
-                        .title{
+                        .title {
                             width: 100%;
                             font-size: .28rem;
                             line-height: .32rem;
@@ -283,27 +291,27 @@
                             -webkit-box-orient: vertical;
                             -webkit-line-clamp: 2;
                         }
-                        .fonts{
+                        .fonts {
                             width: 100%;
                             font-size: .24rem;
-                            line-height: .25rem; 
-                            margin-top: .2rem;  
+                            line-height: .25rem;
+                            margin-top: .2rem;
                             display: -webkit-box;
                             -webkit-box-orient: vertical;
-                            -webkit-line-clamp: 5;                     
+                            -webkit-line-clamp: 5;
                         }
                     }
                 }
-                .list:first-child{
-                    border-bottom: 1px dashed #fff; 
+                .list:first-child {
+                    border-bottom: 1px dashed #fff;
                 }
             }
-            .link_list{
+            .link_list {
                 width: 3.52rem;
                 height: 1.43rem;
                 overflow: hidden;
                 margin: 0 auto;
-                .wechat{
+                .wechat {
                     width: 1.43rem;
                     height: 100%;
                     background: url("../assets/m-wechat.png") center no-repeat;
@@ -312,7 +320,7 @@
                     overflow: hidden;
                     float: left;
                 }
-                .facebook{
+                .facebook {
                     width: 1.43rem;
                     height: 100%;
                     background: url("../assets/m-facebook.png") center no-repeat;
@@ -320,31 +328,31 @@
                     background-size: 40%;
                     overflow: hidden;
                     float: right;
-                }           
+                }
             }
         }
     }
 }
 
 // 悬浮层
-.layou_box{
+.layou_box {
     position: fixed;
     top: 90px;
     right: 0;
     z-index: 199;
-    .list_box{
+    .list_box {
         width: 60px;
         background-color: #ebebeb;
         overflow: hidden;
-        .item{
+        .item {
             width: 100%;
             height: 60px;
             cursor: pointer;
         }
-        .wechat{
+        .wechat {
             background: url("../assets/index_06.png") center no-repeat;
         }
-        .facebook{
+        .facebook {
             background: url("../assets/index_19.png") center no-repeat;
         }
     }
