--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,18 +44,22 @@ textarea {
     outline: none;
     resize: none;
 }
-img{
+
+img {
     width: auto;
     font-size: 0;
 }
-.shell{
+
+.shell {
     width: 100%;
     overflow: hidden;
     position: relative;
 }
+
 .sz18 {
     font-size: 18px;
 }
+
 .w1140 {
     margin: 0 100px;
 }
@@ -71,52 +75,64 @@ img{
 .tr {
     text-align: right;
 }
-.red_bg{
+
+.red_bg {
     background-color: #e50012;
 }
-.blue_bg{
+
+.blue_bg {
     background-color: #053a7a;
 }
-.mt20{
+
+.mt20 {
     margin-top: 20px;
 }
-.mt25{
+
+.mt25 {
     margin-top: 25px;
 }
-.mt30{
+
+.mt30 {
     margin-top: 30px;
 }
-.mt40{
+
+.mt40 {
     margin-top: 40px;
 }
-.mt50{
+
+.mt50 {
     margin-top: 50px;
 }
-.red{
+
+.red {
     color: #e50012;
 }
-.line1{
+
+.line1 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
     text-overflow: ellipsis;
     overflow: hidden;
 }
-.line2{
+
+.line2 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     text-overflow: ellipsis;
     overflow: hidden;
 }
-.line3{
+
+.line3 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     text-overflow: ellipsis;
     overflow: hidden;
 }
-.layou_fixed{
+
+.layou_fixed {
     width: 100%;
     height: 100%;
     background-color: rgba($color: #000000, $alpha: 0.4);
@@ -126,7 +142,8 @@ img{
     top: 0;
     z-index: 999;
 }
-.fixed_pos{
+
+.fixed_pos {
     margin: auto;
     position: absolute;
     top: 0;
@@ -134,6 +151,15 @@ img{
     bottom: 0;
     right: 0;
 }
+
+.center {
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+}
+
 @import "base/nav.scss";
 @import "base/banner.scss";
 @import "base/common.scss";
