--- a/src/scss/base/nav.scss
+++ b/src/scss/base/nav.scss
@@ -244,6 +244,7 @@
             height: 90px;
             overflow: hidden;
             .item {
+                width: 33.33%;
                 height: 100%;
                 overflow: hidden;
                 float: left;
