--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -80,6 +80,10 @@ img {
     background-color: #e50012;
 }
 
+.red_bg_aa {
+    background-color: #aa010e;
+}
+
 .blue_bg {
     background-color: #053a7a;
 }
