--- a/src/scss/base/nav.scss
+++ b/src/scss/base/nav.scss
@@ -20,6 +20,7 @@
         .list {
             display: block;
             padding: 0 10px;
+            font-weight: 600;
             position: relative;
             float: left;
             cursor: pointer;
