页面内容替换为后台输出

--- a/src/scss/base/nav.scss
+++ b/src/scss/base/nav.scss
@@ -45,7 +45,7 @@
         .second:hover {
             .second_list {
                 display: block;
-                width: 230px;
+                width: 235px;
                 padding-bottom: 15px;
                 background-color: #ebebeb;
                 overflow: hidden;
@@ -66,6 +66,9 @@
                     color: #000;
                     text-align: left;
                     cursor: pointer;
+                    .pdf_block {
+                        color: #000;
+                    }
                 }
                 .item:hover {
                     background-color: #fff;
