--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -91,6 +91,7 @@
                 }
             }
             .new_list {
+                height: 100%;
                 padding: 0 25px;
                 background-color: #053a7a;
                 overflow: hidden;
