--- a/src/scss/base/bottom.scss
+++ b/src/scss/base/bottom.scss
@@ -50,6 +50,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            img{
+                width: 100px;
+            }
         }
         .bth {
             display: block;
