--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -100,6 +100,9 @@
                     padding: 38px 0;
                     cursor: pointer;
                     overflow: hidden;
+                    .news_wall{
+                        overflow: hidden;
+                    }
                     .img {
                         width: 120px;
                         height: 120px;
@@ -269,6 +272,9 @@
                     width: 100%;
                     padding: .7rem 0;
                     overflow: hidden;
+                    .news_wall{
+                        overflow: hidden;
+                    }                   
                     .img {
                         width: 2.15rem;
                         height: 2.15rem;
