--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -62,7 +62,14 @@
                 margin-top: 70px;
                 margin-right: 32px;
                 overflow: hidden;
+                position: relative;
                 float: left;
+                .logo_link {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                }
                 .logo_box {
                     width: 100%;
                     height: 224px;
@@ -220,7 +227,14 @@
                 padding-right: .15rem;
                 box-sizing: border-box;
                 overflow: hidden;
+                position: relative;
                 float: left;
+                .logo_link {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                }
                 .logo_box {
                     width: 100%;
                     height: 3.4rem;
@@ -270,7 +284,14 @@
                 padding-right: .15rem;
                 box-sizing: border-box;
                 overflow: hidden;
+                position: relative;
                 float: left;
+                .logo_link {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                }
                 .logo_box {
                     width: 100%;
                     height: 1.36rem;
