--- a/src/scss/press.scss
+++ b/src/scss/press.scss
@@ -31,6 +31,10 @@
                 margin-right: 37px;
                 float: left;
                 overflow: hidden;
+                .news_wall{
+                    overflow: hidden;
+                    cursor: pointer;
+                }
             }
             .item:nth-of-type(3n+0){
                 margin-right: 0;
