--- a/src/scss/base/nav.scss
+++ b/src/scss/base/nav.scss
@@ -247,7 +247,7 @@
             height: 38px;
             line-height: 38px;
             font-size: 20px;
-            text-align: left;
+            text-align: right;
             overflow: hidden;
         }
         .logo_list {
