--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,7 +111,9 @@ img {
 .red {
     color: #e50012;
 }
-
+.weight{
+    font-weight: 600;
+}
 .line1 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
