--- a/src/scss/base/nav.scss
+++ b/src/scss/base/nav.scss
@@ -409,6 +409,9 @@
                     color: #000;
                     text-align: center;
                     position: relative;
+                    .pdf_block {
+                        color: #000;
+                    }
                 }
             }
         }
@@ -516,6 +519,7 @@
                 line-height: .36rem;
                 font-size: .36rem;
                 color: #000;
+                text-align: center;
                 font-weight: 600;
                 letter-spacing: .1rem;
                 text-indent: .08rem;
